--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Alix Regnier
+<!--TODO: Mettre photo-->
+
+<h2>Alix Regnier</h2>
+Contact: <a href="mailto:alix.regnier@inria.fr">alix.regnier@inria.fr</a>
+<br>
+<br>
+
+<div style="text-align: left; width: 62%">
+I'm currently a Ph.D. student at the Inria Center at Rennes University in the <a href="https://team.inria.fr/genscale/">GenScale</a> team, my Ph.D. is supervised by <a target="_blank" href="https://people.rennes.inria.fr/Pierre.Peterlongo/">Pierre Peterlongo</a> (Inria) and <a href="">Rayan Chikhi</a> (Pasteur Institute).
+
+My research subject is <i>"Limiting the size of data structures indexing genomic sequences"</i>. It is an important subject in bioinformatics, as biggest indexes can reach several petabytes, which requires large and costly infrastructures. Basically, I try to reduce (or even to compress) data structures but paying attention to the impact on lookup time.</div>
+
+<h3>Projects:</h3>
+
+Incoming.
+
+<h3>Publications:</h3>
+
+Incoming.
+
+<footer>
+<br>
+<i>Lastly updated: 03/09/2024</i>
+</footer>
