--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Contact: <a href="mailto:alix.regnier@inria.fr">alix.regnier@inria.fr</a>
 <br>
 
 <div style="text-align: left; width: 62%">
-I'm currently a Ph.D. student at the Inria Center at Rennes University in the <a href="https://team.inria.fr/genscale/">GenScale</a> team, my Ph.D. is supervised by <a target="_blank" href="https://people.rennes.inria.fr/Pierre.Peterlongo/">Pierre Peterlongo</a> (Inria) and <a href="">Rayan Chikhi</a> (Pasteur Institute).
+I'm currently a Ph.D. student at the Inria Center at Rennes University in the <a target="_blank" href="https://team.inria.fr/genscale/">GenScale</a> team, my Ph.D. is supervised by <a target="_blank" href="https://people.rennes.inria.fr/Pierre.Peterlongo/">Pierre Peterlongo</a> (Inria) and <a target="_blank" href="http://rayan.chikhi.name/">Rayan Chikhi</a> (Pasteur Institute).
 
 My research subject is <i>"Limiting the size of data structures indexing genomic sequences"</i>. It is an important subject in bioinformatics, as biggest indexes can reach several petabytes, which requires large and costly infrastructures. Basically, I try to reduce (or even to compress) data structures but paying attention to the impact on lookup time.</div>
 
@@ -20,5 +20,5 @@ Incoming.
 
 <footer>
 <br>
-<i>Lastly updated: 03/09/2024</i>
+<i>Lastly updated: 04/09/2024</i>
 </footer>
